// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`fitSpans > start: 0, end: 15 1`] = `
origin
> 1 |  ( ( ( 1 ) ) ) 
    | ^^^^^^^^^^^^^^^
inner
> 1 |  ( ( ( 1 ) ) ) 
    |  ^^^^^^^^^^^^^
outer hasParens=false
> 1 |  ( ( ( 1 ) ) ) 
    |  ^^^^^^^^^^^^^
`;

exports[`fitSpans > start: 1, end: 14 1`] = `
origin
> 1 |  ( ( ( 1 ) ) ) 
    |  ^^^^^^^^^^^^^
inner
> 1 |  ( ( ( 1 ) ) ) 
    |  ^^^^^^^^^^^^^
outer hasParens=false
> 1 |  ( ( ( 1 ) ) ) 
    |  ^^^^^^^^^^^^^
`;

exports[`fitSpans > start: 2, end: 13 1`] = `
origin
> 1 |  ( ( ( 1 ) ) ) 
    |   ^^^^^^^^^^^
inner
> 1 |  ( ( ( 1 ) ) ) 
    |    ^^^^^^^^^
outer hasParens=true
> 1 |  ( ( ( 1 ) ) ) 
    |  ^^^^^^^^^^^^^
`;

exports[`fitSpans > start: 3, end: 12 1`] = `
origin
> 1 |  ( ( ( 1 ) ) ) 
    |    ^^^^^^^^^
inner
> 1 |  ( ( ( 1 ) ) ) 
    |    ^^^^^^^^^
outer hasParens=true
> 1 |  ( ( ( 1 ) ) ) 
    |  ^^^^^^^^^^^^^
`;

exports[`fitSpans > start: 4, end: 11 1`] = `
origin
> 1 |  ( ( ( 1 ) ) ) 
    |     ^^^^^^^
inner
> 1 |  ( ( ( 1 ) ) ) 
    |      ^^^^^
outer hasParens=true
> 1 |  ( ( ( 1 ) ) ) 
    |  ^^^^^^^^^^^^^
`;

exports[`fitSpans > start: 5, end: 10 1`] = `
origin
> 1 |  ( ( ( 1 ) ) ) 
    |      ^^^^^
inner
> 1 |  ( ( ( 1 ) ) ) 
    |      ^^^^^
outer hasParens=true
> 1 |  ( ( ( 1 ) ) ) 
    |  ^^^^^^^^^^^^^
`;

exports[`fitSpans > start: 6, end: 9 1`] = `
origin
> 1 |  ( ( ( 1 ) ) ) 
    |       ^^^
inner
> 1 |  ( ( ( 1 ) ) ) 
    |        ^
outer hasParens=true
> 1 |  ( ( ( 1 ) ) ) 
    |  ^^^^^^^^^^^^^
`;
